# html-xml-utils

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  asc2xml.1  asc2xml.c  class.c  class.e  config.h.in  configure  configure.ac  connectsock.c  connectsock.e  dict.c  dict.e  dtd.c  dtd.e  dtd.hash  errexit.c  errexit.e  fopencookie.c  fopencookie.h  genid.c  genid.e  hash.c  hash.e  headers.c  headers.e  heap.c  heap.e  html.c  html.e  html.h  html.y  hxaddid.1  hxaddid.c  hxcite-mkbib  (+84 more)
m4/: flex-optimize.m4  libidn.m4  libidn2.m4  optreset.m4
tests/: addid1.sh  ascxml.sh  cdata1.sh  cite1.sh  cite2.sh  cite3.sh  cite4.sh  clean1.sh  copy1.sh  copy2.sh  copy3.sh  copy4.sh  copy5.sh  copy6.sh  copy7.sh  copy8.sh  extract1.sh  hxnsxml1.sh  hxnsxml2.sh  hxnsxml3.sh  hxnsxml4.sh  incl1.sh  incl10.sh  incl11.sh  incl2.sh  incl3.sh  incl4.sh  incl5.sh  incl6.sh  incl7.sh  incl8.sh  incl9.sh  index.sh  index10.sh  index2.sh  index3.sh  index4.sh  index5.sh  index6.sh  index7.sh  (+115 more)
